# NonRigidICP

./: CMakeLists.txt  README.md  Readme.txt  landmarkDetector.h  main.cpp  nonRigidICP.h  nonrigid_icp.kdev4
demo1/: 00000004.txt
template/: innerLandmark.txt  outerLandmark.txt  source.txt  template.ply
